Changed Title of Page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Nba-height-weight</h1>
+        <h1>NBA Player Height&Weight Dataset</h1>
         <p></p>
       </header>
 
