--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome!.</h3>
 
 <p>Welcome to the NBA Height/Weight Dataset. This project began as a simply Python script to scrape Height and Weight of player from <a href ="http://www.Basketball-Reference.com">Basketball-Reference</a>. Right now, height.py outputs in the format of a CSV file as follows:</p>
 
