--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <ul>
             <li><a href="https://github.com/simonwarchol/NBA-Height-Weight/zipball/master" class="button">ZIP</a></li>
             <li><a href="https://github.com/simonwarchol/NBA-Height-Weight/tarball/master" class="button">TAR</a></li>
-            <li><a href="https://github.com/simonwarchol/NBA-Height-Weight"
+            <li><a href="https://github.com/simonwarchol/NBA-Height-Weight" class="button">DATAM</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
@@ -41,7 +41,7 @@
       </nav>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome!.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome</h3>
 
 <p>Welcome to the NBA Height/Weight Dataset. This project began as a simply Python script to scrape Height and Weight of player from <a href ="http://www.Basketball-Reference.com">Basketball-Reference</a>. Right now, height.py outputs in the format of a CSV file as follows:</p>
 
