--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>NBA Player Physique Trends</h3>
 
 <p>Here are some visualizations of the trends in NBA players' heights and weights</p>
-
+<h4>Average NBA Height & Weight (1955-2014)</h4>
+<iframe src="http://gfycat.com/ifr/GlaringTepidCornsnake" frameborder="0" scrolling="no" width="500" height="250" style="-webkit-backface-visibility: hidden;-webkit-transform: scale(1);" ></iframe>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
