--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 <p>Here are some visualizations of the trends in NBA players' heights and weights</p>
 <h4>Average NBA Height & Weight (1955-2014)</h4>
 <iframe src="http://gfycat.com/ifr/GlaringTepidCornsnake" frameborder="0" scrolling="no" width="500" height="250" style="-webkit-backface-visibility: hidden;-webkit-transform: scale(1);" ></iframe>
+<h4>Here are the height and weight trends over time independently.</h4>
+<img src ="images/height.png" height="250" width="500">
+<img src ="images/weight.png" height="250" width="500">
+Interestingly, the average height of a NBA player has plateaued, while weight continues to increase at a slow and gradual rate. 
+
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
