--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <ul>
             <li><a href="https://github.com/simonwarchol/NBA-Height-Weight/zipball/master" class="button">ZIP</a></li>
             <li><a href="https://github.com/simonwarchol/NBA-Height-Weight/tarball/master" class="button">TAR</a></li>
-            <li><a href="https://github.com/simonwarchol/NBA-Height-Weight/zipball/data" class="button">Data</a></li>
+            <li><a href="Master.xlsx" class="button">Data</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
