Prettied up the site a bit

--- a/index1.html
+++ b/index1.html
@@ -14,11 +14,11 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/simonwarchol/NBA-Height-Weight">View on GitHub</a>
-          <a id="nbalogo"></a>
-          <h1 id="project_title">NBA Height and Weight Data</h1>
+    v
+  <div id="header_wrap" class="outer">
+    <header class="inner">
+      <a id="forkme_banner" href="https://github.com/simonwarchol/NBA-Height-Weight">View on GitHub</a>
+      <h1 id="project_title" allign="right"><img src="images/logo.jpg" width="122" height="122">NBA Height and Weight Data</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -53,7 +53,7 @@
 <img src ="images/height.png" height="350" width="700">
 <img src ="images/weight.png" height="350" width="700">
 <br>
-Interestingly, the average height of a NBA player has plateaued, while weight continues to increase at a slow and gradual rate. I had initially sepculated that given the NBA has become increasingly international, the average height and weight would have continued to increase over recent years. According to a press release from 2010, "At the end of the 2009-10 regular season, the NBA featured 79 international players from 35 countries and territories on team rosters (both active and inactive). In comparison, ten years ago NBA rosters featured 45 international players from 28 countries and territories on opening night of the 2000-01 season." This, however, doesn't seem to be the case.
+Interestingly, the average height of a NBA player has plateaued, while weight continues to increase at a slow and gradual rate. 
 
 
 <h3>
