first javascript test

--- a/index.html
+++ b/index.html
@@ -48,7 +48,58 @@
 
 <p>Here are some visualizations of the trends in NBA players' heights and weights</p>
 <h4>Average NBA Height & Weight (1955-2014)</h4>
-<iframe src="http://gfycat.com/ifr/GlaringTepidCornsnake" frameborder="0" scrolling="no" width="700" height="350" style="-webkit-backface-visibility: hidden;-webkit-transform: scale(1);" ></iframe>
+<script src="http://d3js.org/d3.v2.js?2.9.6"></script>
+<script>
+ 
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+ 
+var x = d3.scale.linear()
+    .range([0, width]);
+ 
+var y = d3.scale.linear()
+    .range([height, 0]);
+ 
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+ 
+d3.csv("data.csv", function(data) {
+ 
+  // Coerce the strings to numbers.
+  data.forEach(function(d) {
+    d.x = +d.x;
+    d.y = +d.y;
+  });
+ 
+  // Compute the scales’ domains.
+  x.domain(d3.extent(data, function(d) { return d.x; })).nice();
+  y.domain(d3.extent(data, function(d) { return d.y; })).nice();
+ 
+  // Add the x-axis.
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.svg.axis().scale(x).orient("bottom"));
+ 
+  // Add the y-axis.
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(d3.svg.axis().scale(y).orient("left"));
+ 
+  // Add the points!
+  svg.selectAll(".point")
+      .data(data)
+    .enter().append("path")
+      .attr("class", "point")
+      .attr("d", d3.svg.symbol().type("triangle-up"))
+      .attr("transform", function(d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; });
+});
+ 
+</script>
 <h4>Here are the height and weight trends over time independently.</h4>
 <img src ="images/height.png" height="350" width="700">
 <img src ="images/weight.png" height="350" width="700">
