--- a/html1.html
+++ b/html1.html
@@ -72,7 +72,7 @@ var tooltip = d3.select("body").append("div")
     .style("opacity", 0);
 
 // load data
-d3.csv("cereal.csv", function(error, data) {
+d3.csv("yearly.csv", function(error, data) {
 
   // change string (from CSV) into number format
   data.forEach(function(d) {
