changed data source

--- a/html1.html
+++ b/html1.html
@@ -44,19 +44,19 @@ var margin = {top: 20, right: 20, bottom: 30, left: 40},
  */ 
 
 // setup x 
-var xValue = function(d) { return d.Calories;}, // data -> value
+var xValue = function(d) { return d.Height;}, // data -> value
     xScale = d3.scale.linear().range([0, width]), // value -> display
     xMap = function(d) { return xScale(xValue(d));}, // data -> display
     xAxis = d3.svg.axis().scale(xScale).orient("bottom");
 
 // setup y
-var yValue = function(d) { return d["Protein (g)"];}, // data -> value
-    yScale = d3.scale.linear().range([height, 0]), // value -> display
+var yValue = function(d) { return d["Width"];}, // data -> value
+    yScale = d3.scale.linear().range([width, 0]), // value -> display
     yMap = function(d) { return yScale(yValue(d));}, // data -> display
     yAxis = d3.svg.axis().scale(yScale).orient("left");
 
 // setup fill color
-var cValue = function(d) { return d.Manufacturer;},
+var cValue = function(d) { return d.Year;},
     color = d3.scale.category10();
 
 // add the graph canvas to the body of the webpage
@@ -76,8 +76,8 @@ d3.csv("yearly.csv", function(error, data) {
 
   // change string (from CSV) into number format
   data.forEach(function(d) {
-    d.Calories = +d.Calories;
-    d["Protein (g)"] = +d["Protein (g)"];
+    d.Height = +d.Height;
+    d["Weight"] = +d["Weight"];
 //    console.log(d);
   });
 
@@ -95,7 +95,7 @@ d3.csv("yearly.csv", function(error, data) {
       .attr("x", width)
       .attr("y", -6)
       .style("text-anchor", "end")
-      .text("Calories");
+      .text("Height");
 
   // y-axis
   svg.append("g")
@@ -107,7 +107,7 @@ d3.csv("yearly.csv", function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Protein (g)");
+      .text("Weight");
 
   // draw dots
   svg.selectAll(".dot")
@@ -122,7 +122,7 @@ d3.csv("yearly.csv", function(error, data) {
           tooltip.transition()
                .duration(200)
                .style("opacity", .9);
-          tooltip.html(d["Cereal Name"] + "<br/> (" + xValue(d) 
+          tooltip.html(d["Year"] + "<br/> (" + xValue(d)
 	        + ", " + yValue(d) + ")")
                .style("left", (d3.event.pageX + 5) + "px")
                .style("top", (d3.event.pageY - 28) + "px");
