--- a/html1.html
+++ b/html1.html
@@ -44,7 +44,7 @@ var margin = {top: 20, right: 20, bottom: 30, left: 40},
  */ 
 
 // setup x 
-var xValue = function(d) { return d.Height;}, // data -> value
+var xValue = function(d) { return d["Height"];}, // data -> value
     xScale = d3.scale.linear().range([0, width]), // value -> display
     xMap = function(d) { return xScale(xValue(d));}, // data -> display
     xAxis = d3.svg.axis().scale(xScale).orient("bottom");
@@ -56,7 +56,7 @@ var yValue = function(d) { return d["Width"];}, // data -> value
     yAxis = d3.svg.axis().scale(yScale).orient("left");
 
 // setup fill color
-var cValue = function(d) { return d.Year;},
+var cValue = function(d) { return d["Year"];},
     color = d3.scale.category10();
 
 // add the graph canvas to the body of the webpage
@@ -76,7 +76,7 @@ d3.csv("yearly.csv", function(error, data) {
 
   // change string (from CSV) into number format
   data.forEach(function(d) {
-    d.Height = +d.Height;
+    d["Height"] = + d["Height"];
     d["Weight"] = +d["Weight"];
 //    console.log(d);
   });
