--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ Interestingly, the average height of a NBA player has plateaued, while weight co
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p>Project by Simon Warchol. Feel free to contact me at me (at) simonwarchol.com</p>
-<p>Used Malcolm Maclean's <a href="https://leanpub.com/D3-Tips-and-Tricks">D3 Tips and Tricks</a> for the charts</p>
+<p>Project by Simon Warchol. Feel free to contact me at me (at) simonwarchol.com.</p>
+<p>Used Malcolm Maclean's <a href="https://leanpub.com/D3-Tips-and-Tricks">D3 Tips and Tricks</a> for the charts.</p>
       </section>
     </div>
 
